--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,8 +4,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - uses: actions/setup-dotnet@v1
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
         with:
-        dotnet-version: '3.1.x'
-      -run: dotnet build src/
+          dotnet-version: "3.1"
+
+      # dotnet build
+      - name: Build with dotnet
+        run: dotnet build src/
