Add UiB.Unit.Tests to Github Actions Workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,6 +10,8 @@ jobs:
         with:
           dotnet-version: "3.1"
 
-      # dotnet build
       - name: Build with dotnet
         run: dotnet build src/
+
+      - name: Test Units with dotnet
+        run: dotnet test tests/UiB.Unit.Tests
