Re-structure folders of Domain layer and Unit Tests

--- a/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
+++ b/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\UiB.Domain\UiB.Domain\UiB.Domain.csproj" />
+    <ProjectReference Include="..\..\src\UiB.Domain\UiB.Domain.csproj" />
   </ItemGroup>
 
 </Project>
