Create Unit Test for WorkShiftService for creation of WorkShift

--- a/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
+++ b/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\UiB.Application\UiB.Application.csproj" />
     <ProjectReference Include="..\..\src\UiB.Domain\UiB.Domain.csproj" />
   </ItemGroup>
 
