Changing Application layer into Api layer & from class library to .net application (#6)

--- a/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
+++ b/tests/UiB.Unit.Tests/UiB.Unit.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\UiB.Application\UiB.Application.csproj" />
+    <ProjectReference Include="..\..\src\UiB.Api\UiB.Api.csproj" />
     <ProjectReference Include="..\..\src\UiB.Domain\UiB.Domain.csproj" />
     <ProjectReference Include="..\UiB.Tests.Utilities\UiB.Tests.Utilities.csproj" />
   </ItemGroup>
