--- a/src/UiB.Api/UiB.Api.csproj
+++ b/src/UiB.Api/UiB.Api.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\UiB.Domain\UiB.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WorkShifts\" />
+  </ItemGroup>
+
 </Project>
