--- a/src/UiB.Api/UiB.Api.csproj
+++ b/src/UiB.Api/UiB.Api.csproj
@@ -12,4 +12,10 @@
     <Folder Include="WorkShifts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
+  </ItemGroup>
+
 </Project>
