Implement Create WorkShift functionality without connecting to database (#11)
* Create repository layer for MySQL database

* Add the Id property to the WorkShift and remove the Total property

* Create WorkShiftController, Repository and use them in the service

--- a/src/UiB.Api/UiB.Api.csproj
+++ b/src/UiB.Api/UiB.Api.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UiB.Domain\UiB.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WorkShifts\" />
+    <ProjectReference Include="..\UiB.MySql\UiB.MySql.csproj" />
   </ItemGroup>
 
   <ItemGroup>
