Configure MySQL connectionString and SimpleInjector (#13)
* Configuring and using MySQL ConnectionString in appsettings.json

* Add and configure SimpleInjector and use it to register Service and Repository

--- a/src/UiB.Api/appsettings.json
+++ b/src/UiB.Api/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=http://localhost:3306/;Database=UiB;Uid=root;Pwd=P@ssw0rd;"
 }
