Upgrade packages ini to 1.3.6 and node-notifier to 8.0.1 (#27)
* Upgrade packages ini to 1.3.6 and node-notifier to 8.0.1

* Change the Github Actions front-end build to use Yarn instead of NPM

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Clean install dependencies and build
         working-directory: src/UiB.UI
         run: |
-          npm ci
-          npm run build
+          yarn install
+          yarn build
